samples/_failures_safe/1761360485_0e500d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_06d820c8.c: In function ‘main’:
./samples/SAFE/__tmp_06d820c8.c:149:28: error: missing terminating " character
  149 |                     printf("Error: Cannot add matrices - dimension mismatch
      |                            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_06d820c8.c:149:21: error: expected expression at end of input
  149 |                     printf("Error: Cannot add matrices - dimension mismatch
      |                     ^~~~~~
./samples/SAFE/__tmp_06d820c8.c:149:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_06d820c8.c:149:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_06d820c8.c:149:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_06d820c8.c:149:21: error: expected declaration or statement at end of input
